# DuckTodo

./: .dockerignore  .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.yml  env.example
ai-backend/: pyproject.toml  run.py
ai-backend/api/: __init__.py  app.py
ai-backend/api/router/: __init__.py  daily_report_router.py  llm_router.py
ai-backend/common/: __init__.py
ai-backend/common/enums/: __init__.py  delete_status_enum.py  if_owner_enum.py  llm_model_type_enum.py  result_code.py  task_audit_action_enum.py  task_group_status_enum.py  task_node_status_enum.py  task_priority_enum.py  task_status_enum.py  team_status_enum.py  user_role_enum.py  user_sex_enum.py  user_status_enum.py
ai-backend/common/result/: __init__.py  r.py
ai-backend/db/: __init__.py  base_database.py  child_task_database.py  database.py  task_audit_database.py  task_database.py  task_edge_database.py  task_file_database.py  task_group_database.py  task_group_user_relation_database.py  task_node_database.py  task_user_relation_database.py  team_database.py  team_user_relation_database.py  user_database.py  user_dingtalk_robot_database.py  user_llm_config_database.py  user_security_database.py  user_tool_config_database.py
ai-backend/llm/: __init__.py  base.py  llm.py  llm_bailian.py  llm_openai.py  llm_openai_compatible.py  llm_siliconflow.py
ai-backend/models/: __init__.py
ai-backend/prompt/: __init__.py  daily_report_prompt.py
ai-backend/service/: __init__.py  daily_report_service.py
ai-backend/utils/: __init__.py  config_util.py  jwt_util.py  logger_util.py
(+338 files in other folders)
